feat: add performance optimization